--- a/thml5/basicHtml.html
+++ b/thml5/basicHtml.html
@@ -5,7 +5,7 @@
   <title>타이틀 표제</title>
   </head>
 <body>
-  <button onclick="location.href='address'">button</button>
+  <button onclick="location.href='address'">1절</button>
   <h1>애국가</h1>
   <p>동해물과 백두산이</p>
   <p>마르고 닳도록</p>
