--- a/koreaAnthem3.html
+++ b/koreaAnthem3.html
@@ -1,5 +1,5 @@
 <!doctype html>  <!--koreaAnthem3.html-->
-<html lang="ko"?
+<html lang="ko">
 <head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <script>
   function event1onclick(){   document.geElementByld("id_1")innerHTML
