--- a/koreaAnthem3.html
+++ b/koreaAnthem3.html
@@ -11,9 +11,9 @@
   function event4onclick(){   document.geElementByld("id_1")innerHTML
   ="이 기상과 이 맘으로 충성을 다하여 괴로우나 즐거우나 나라 사랑하세<br/>(후렴)무궁화 삼천리 화려강산 대한 사람 대한으로 길이 보전하세<br/>";}
 </script>
-<title>애국가</title>
+<title>애국가1</title>
 </head>
-<body onload="eventonload()"/>
+<body onload="event1onload()"/>
   <h4>애국가</h4>
   <p onclick="event1onclick()">1절</p><p onclick="event2onclick()">2절</p><p onclick="event3onclick()">3절</p><p onclick="event4onclick()">4절</p><pid=id_1">메시지표시</p>
     </body></html>
