--- a/koreaAnthem3.html
+++ b/koreaAnthem3.html
@@ -13,8 +13,8 @@
 </script>
 <title>애국가1</title>
 </head>
-<body onload="event1onload()"/>
+<body>
   <h4>애국가</h4>
-  <p onclick="event1onclick()">1절</p><p onclick="event2onclick()">2절</p><p onclick="event3onclick()">3절</p><p onclick="event4onclick()">4절</p><pid=id_1">메시지표시</p>
+  <p onclick="event1onclick()">1절</p><p onclick="event2onclick()">2절</p><p onclick="event3onclick()">3절</p><p onclick="event4onclick()">4절</p><p id=id_1">메시지표시</p>
     </body></html>
     
