--- a/1/basicPBrHr.html
+++ b/1/basicPBrHr.html
@@ -1,6 +1,6 @@
 <!doctype html> <!-- basicPBrHr.html-->
 <html>
-<head> 
+<head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>문서 타이틀 표제</title>
@@ -11,6 +11,5 @@
 <div id="div1">
  head 요소는 HTML 문서를 설명하는 요소로, <hr>하위요소로 &lt;meta&gt;, &lt;title&gt;, &lt;link&gt;, &lt;style&gt;, &lt;script&gt; 요소가 가능.</div>
 <span id="span1">
- body 요소는 HTML 문서의 실제 내용이 작성되는 요소로, <hr>다양한 태그를 이용하여 html 문서 작성이 가능하다. </span>
-</body>
-</html>
+ body 요소는 HTML 문서의 실제 내용이 작성되는 요소로, <hr>다양한 태그를 이용하여 html 문서 작성이 가능하다.</span>
+</body></html>
