--- a/2/basicImage.html
+++ b/2/basicImage.html
@@ -9,7 +9,7 @@
 <figure>
   <h3>SNS 사이트</h3>
   <a href="https://www.google.com">
-    <img src="../images/googlePlus.png" alt="구글"><br>
+    <img src="https://t1.daumcdn.net/thumb/R720x0/?fname=http://t1.daumcdn.net/brunch/service/user/5rH/image/LHUiJV1nog0BqnOJ8Mtj5UbNTjQ"><br>
     <figcaption>(그림) 구글 링크</figcaption>
   </a>
   <a href="https://www.facebook.com">
