--- a/2/basicImage.html
+++ b/2/basicImage.html
@@ -13,11 +13,11 @@
     <figcaption>(그림) 구글 링크</figcaption>
   </a>
   <a href="https://www.facebook.com">
-    <img src="../images/facebookOne.png" alt="페이스북"><br>
+    <img src="https://www.facebook.com/images/fb_icon_325x325.png"><br>
     <figcaption>(그림) 페이스북 링크</figcaption>
   </a>
   <a href="http://www.twitter.com">
-    <img src="../images/twitterYou.png" alt="트위터"><br>
+    <img src="https://upload.wikimedia.org/wikipedia/ko/thumb/9/9e/%ED%8A%B8%EC%9C%84%ED%84%B0_%EB%A1%9C%EA%B3%A0_%282012%29.svg/1200px-%ED%8A%B8%EC%9C%84%ED%84%B0_%EB%A1%9C%EA%B3%A0_%282012%29.svg.png"><br>
     <figcaption>(그림)트위터 링크</figcaption>
   </a>
 </figure>
