--- a/2/basicSemantic2.html
+++ b/2/basicSemantic2.html
@@ -25,7 +25,7 @@
 <body>
   <header>
     <h2>실습을 환영합니다</h2>
-    <img src="../wp/scene.png" alt="히말라야">
+    <img src="https://post-phinf.pstatic.net/MjAxNzA1MTlfMjk1/MDAxNDk1MTY4MTY5MjQw.nEd8TS_eKeVbXtwYrPsmpsscLhiFM8Vp5JTe34v-IJYg.shxMUlp9dvTmJ9cBYxydZ7Fzw1Eys0Mo1kFkolD9wXIg.JPEG/1.jpg?type=w1200">
   </header>
   <nav>
     <ul>
