--- a/2/basicSemantic2.html
+++ b/2/basicSemantic2.html
@@ -55,9 +55,9 @@
   </section>    <!--   /main  -->
   <aside>
      <ul>
-      <li><a href="https://www.google.com"><img src="../images/googlePlus.png" alt="구글"></a></li>
-      <li><a href="https://www.facebook.com"><img src="../images/facebookOne.png" alt="페이스북"></a></li>
-      <li><a href="https://www.twitter.com"><img src="../images/twitterYou.png" alt="트위터"></a></li>
+      <li><a href="https://www.google.com"><img src="https://t1.daumcdn.net/thumb/R720x0/?fname=http://t1.daumcdn.net/brunch/service/user/5rH/image/LHUiJV1nog0BqnOJ8Mtj5UbNTjQ" alt="구글"></a></li>
+      <li><a href="https://www.facebook.com"><img src="https://www.facebook.com/images/fb_icon_325x325.png" alt="페이스북"></a></li>
+      <li><a href="https://www.twitter.com"><img src="https://upload.wikimedia.org/wikipedia/ko/thumb/9/9e/%ED%8A%B8%EC%9C%84%ED%84%B0_%EB%A1%9C%EA%B3%A0_%282012%29.svg/1200px-%ED%8A%B8%EC%9C%84%ED%84%B0_%EB%A1%9C%EA%B3%A0_%282012%29.svg.png"></a></li>
      </ul>
   </aside>
   <footer>
