--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@ a:link {color;blue;text-decoration:none;}a:visited {color;purple;text-decoration
 a:hover {text-decoration:underline;}a:active{color:red;text-decoration:none;}
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<title>20XX년도 인터넷수강</title>
+<title>2020년도 인터넷수강</title>
 </head>
 </body>
 <header></header>
 <section>
-<p>(설명문)가나다순으로 자신의 이름을 입력,마지막 작성자는 JSP(내이름)과(설명문)을 반드시 지울것</P>
+<p>2020-04-27/P>
 <ol type="1">
-<li><a href="https://yjs8888.github.io/" target="_blank"><윤진수</a></li>
-<li><a href="https://yjs8888.github.io/" target="_blank"><이몽룡</a></li>
+<li><a href="https://yjs8888.github.io/2/basicSemantic2.html" target="_blank">basicSemantic2<</a></li>
+<li><a href="https://yjs8888.github.io/2/basicSemantic1.html" target="_blank">basicSemantic1<</a></li>
 </oi>
 </section>
 </body>
