--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ a:hover {text-decoration:underline;}a:active{color:red;text-decoration:none;}
 <ol type="1">
 <li><a href="https://yjs8888.github.io/2/basicSemantic2.html" target="_blank">basicSemantic2<</a></li>
 <li><a href="https://yjs8888.github.io/2/basicSemantic1.html" target="_blank">basicSemantic1<</a></li>
+<li><a href="https://yjs8888.github.io/1/basicChar.html" target="_blank">basicChar<</a></li>
+<li><a href="https://yjs8888.github.io/1/basicHeading.html" target="_blank">basicHeading<</a></li>
+<li><a href="https://yjs8888.github.io/1/basicList.html" target="_blank">basicList<</a></li>
 </oi>
 </section>
 </body>
