--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <doctype html> <!-- index.html-->
 <html>
-<head><
-meta charset="utf-8"/>
+<head>
+ <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <style>
 a:link {color;blue;text-decoration:none;}a:visited {color;purple;text-decoration;none;}
@@ -13,7 +13,7 @@ a:hover {text-decoration:underline;}a:active{color:red;text-decoration:none;}
 </body>
 <header></header>
 <section>
-<p>2020-04-27/P>
+<p>2020-04-27</P>
 <ol type="1">
 <li><a href="https://yjs8888.github.io/2/basicSemantic2.html" target="_blank">basicSemantic2<</a></li>
 <li><a href="https://yjs8888.github.io/2/basicSemantic1.html" target="_blank">basicSemantic1<</a></li>
