--- a/2/worldmap.html
+++ b/2/worldmap.html
@@ -6,7 +6,7 @@
 </html>
 <body>
 <b>그림을 클릭하세요</b><br>
-<img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/korea.gif?raw=truef" border=0 usemap="#area">
+<img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/2/%EC%84%B8%EA%B3%84%EC%A7%80%EB%8F%84.png?raw=true" border=0 usemap="#area">
 <map name="area">
    <area alt='러시아' shape="rect" target="_blank" coords='730,107,927,127' href="seoul.html">
    <area alt='미국' shape="rect" coords='94,180,195,220' href="incheon.html">
