--- a/2/worldmap.html
+++ b/2/worldmap.html
@@ -19,3 +19,6 @@
    <area alt='멕시코' coords='114,255,138,284' href="daegu.html">
    <area alt='프랑스' coords='533,161,547,174' href="jeonbuk.html">
    <area shape="default"  noref>
+   </map>
+</body>
+</html>
