--- a/2/worldmap.html
+++ b/2/worldmap.html
@@ -8,16 +8,16 @@
 <b>그림을 클릭하세요</b><br>
 <img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/2/%EC%84%B8%EA%B3%84%EC%A7%80%EB%8F%84.png?raw=true" border=0 usemap="#area">
 <map name="area">
-   <area alt='러시아' shape="rect" target="_blank" coords='730,107,927,127' href="seoul.html">
-   <area alt='미국' shape="rect" coords='94,180,195,220' href="incheon.html">
-   <area alt='브라질' coords='301,401,355,459' href="kyunggi.html">
-   <area alt='호주' coords='1018,468,1095,500' href="kangwon.html">
-   <area alt='한국' coords='1008,206,1020,214' href="chnam.html">
-   <area alt='중국' coords='870,195,960,230' href="chbuk.html">
-   <area alt='영국' target="_blank" coords='520,125,535,145' href="daejeon.html">
-   <area alt='독일' coords='560,145,575,155' href="kyungbuk.html">
-   <area alt='멕시코' coords='114,255,138,284' href="daegu.html">
-   <area alt='프랑스' coords='533,161,547,174' href="jeonbuk.html">
+   <area alt='러시아' shape="rect" target="_blank" coords='730,107,927,127' href="russia.html">
+   <area alt='미국' shape="rect" coords='94,180,195,220' href="USA.html">
+   <area alt='브라질' coords='301,401,355,459' href="brazil.html">
+   <area alt='호주' coords='1018,468,1095,500' href="australia.html">
+   <area alt='한국' coords='1008,206,1020,214' href="korea.html">
+   <area alt='중국' coords='870,195,960,230' href="china.html">
+   <area alt='영국' target="_blank" coords='520,125,535,145' href="UK.html">
+   <area alt='독일' coords='560,145,575,155' href="germany.html">
+   <area alt='멕시코' coords='114,255,138,284' href="mexico.html">
+   <area alt='프랑스' coords='533,161,547,174' href="France.html">
    <area shape="default"  noref>
    </map>
 </body>
