--- a/2/basicVideo.html
+++ b/2/basicVideo.html
@@ -12,13 +12,13 @@
     <source src="yjs8888.github.io/traffic.ogg" type="audio/ogg">
     <source src="yjs8888.github.io/traffic.webm" type="audio/webm">
           브라우저가 지원하지 않거나 비디오 형식의 파일이 존재하지 않습니다!!!
-   </video><hr>
+   </video><hr/>
   <h4>비디오 태그 2</h4>
   <video controls="controls">
     <source src="yjs8888.github.io/traffic.mp4" type="audio/mp4">
     <source src="yjs8888.github.io/traffic.ogg" type="audio/ogg">
     <source src="yjs8888.github.io/traffic.webm" type="audio/webm">
           브라우저가 지원하지 않거나 비디오 형식의 파일이 존재하지 않습니다!!!
-  </video><hr>
+  </video><hr/>
 </body>
 </html>
