--- a/2/basicSemantic3.html
+++ b/2/basicSemantic3.html
@@ -1,4 +1,4 @@
-<!DOCTYPEhtml> <!-- basicSemantic3.html -->
+<!DOCTYPE html> <!-- basicSemantic3.html -->
 <html>
 <head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
 <body>
   <header>
     <h2>실습을 환영합니다</h2>
-    <img src="../wp/scene.png" alt="히말라야">
+    <img src="https://post-phinf.pstatic.net/MjAxNzA1MTlfMjk1/MDAxNDk1MTY4MTY5MjQw.nEd8TS_eKeVbXtwYrPsmpsscLhiFM8Vp5JTe34v-IJYg.shxMUlp9dvTmJ9cBYxydZ7Fzw1Eys0Mo1kFkolD9wXIg.JPEG/1.jpg?type=w1200" alt="히말라야">
   </header>
   <nav>
     <ul>
