--- a/2/anchor2.html
+++ b/2/anchor2.html
@@ -22,7 +22,6 @@
   a:active {  color:blue; background-color:transparent; text-decoration:none; }
 </style>
 <title>시멘틱 학습</title></head>
-
 <body>
   <header>
     <h2><a href="https://yjs8888.github.io/2/basicSemantic4.html">실습을 환영합니다</a></h2>
@@ -52,11 +51,11 @@
       <source src="https://yjs8888.github.io/traffic.mp4" type="audio/mp4">
       <source src="https://yjs8888.github.io/boom.ogg" type="audio/ogg">
       <source src="https://yjs8888.github.io/boom.webm" type="audio/webm">
-          브라우저가 지원하지 않거나 비디오 형식의 파일이 존재하지 않습니다!!!     </video><hr>
-  </section>    
-</section>  <!-- /main -->
+          브라우저가 지원하지 않거나 비디오 형식의 파일이 존재하지 않습니다!!!</video><hr/>
+  </section>
+</section> <!-- /main -->
 <footer>
     <p>© 20XX  Made by Korea.  All rights reserved.</p>
-  </footer> 
+	</footer>
 </body>
 </html>
