--- a/2/outstyle1.html
+++ b/2/outstyle1.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8"/>
   <title>외부 스타일 시트 실습</title>
+  <style>
+    h1 {color:blue;}
+  </style>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
