--- a/2/selectorid.html
+++ b/2/selectorid.html
@@ -1,5 +1,7 @@
 <!doctype html><!-- selectorid.html -->
-<html><head><meta charset="utf-8"/>
+<html>
+  <head>
+    <meta charset="utf-8"/>
   <title>선택자 class 실습</title>
   <style>
      #bu1 { color:blue; }  /* 모든 bu클래스 */
