--- a/2/cssFont1.html
+++ b/2/cssFont1.html
@@ -1,5 +1,7 @@
-<!doctype html>  <!-- cssFont1.html -->        
-<html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<!doctype html> <!-- cssFont1.html -->        
+<html>
+  <head>
+    <meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <style>
   .fontFamilyA {font-family:"Time New Roman", Garamond, serif;  }
   .fontFamilyB {font-family:Helvetica, "MS Verdana", sans-serif;  }
