--- a/2/cssWidthHeight1.html
+++ b/2/cssWidthHeight1.html
@@ -10,7 +10,7 @@
 <body>
 <p>width 300px * height 200px</p>
 <div class="div1">
-  <img class="img1" src="../images/lobster.png">
+  <img class="img1" src="https://github.com/yjs8888/yjs8888.github.io/blob/master/lobster.png?raw=true">
 </div>
 <p>div=width300px* height 200px</p>
 <div class="div1">
