--- a/2/cssBg1.html
+++ b/2/cssBg1.html
@@ -1,8 +1,8 @@
 <!doctype html>  <!-- cssBg1.html -->    
 <html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <style>
-.pg1 {  background:beige url("../images/lobster.png")  no-repeat fixed right top;  }
-.pg2 {  background:lightgray url("../images/lobster.png")  no-repeat scroll  right top;  width:10%; height:50px; }
+.pg1 {  background:beige url("https://github.com/yjs8888/yjs8888.github.io/blob/master/lobster.png?raw=true")  no-repeat fixed right top;  }
+.pg2 {  background:lightgray url("https://github.com/yjs8888/yjs8888.github.io/blob/master/lobster.png?raw=true")  no-repeat scroll  right top;  width:10%; height:50px; }
 </style>
 <title>CSS  background 실습</title>
 </head>
