--- a/2/cssBorder1.html
+++ b/2/cssBorder1.html
@@ -1,4 +1,4 @@
-<!doctype html>  <!-- cssBorder1.html -->
+<!doctype html> <!-- cssBorder1.html -->
 <html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <style>
 .pbsolid {border:5px  solid; background:beige;} .pbdashed {border:5px dashed; background:beige;}
@@ -8,7 +8,8 @@
 .pbridge {border:5px ridge; background:beige;} .pbgroove {border:5px groove; background:beige;}
 .pbrad { border:1px solid; border-radius:10px; width:10%;}
 </style>
-<title>CSS  border 실습</title></head>
+<title>CSS border 실습</title>
+  </head>
 <body><section><h3>애국가</h3>
 <p class="pbsolid">(solid)동해물과 백두산이 마르고 닳도록</p>
 <p class="pbdashed">(dashed)하느님이 보우하사 우리나라 만세</p>
