--- a/2/cssFloat1.html
+++ b/2/cssFloat1.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<style> * {margin:0; padding:0; }  p {text-align:justify;} .bdcolor {border:1px solid blue;} /*보더추가*/
-img {display:block;}   /* display:block;은 img 테두리 흰공간 제거*/
-.img1 { float:left;  margin:5px; }</style><title>CSS  float 실습</title></head>
+<style> * {margin:0; padding:0; }  p {text-align:justify;} .bdcolor {border:1px solid blue;}
+img {display:block;}
+.img1 {float:left;  margin:5px; }</style><title>CSS  float 실습</title>
+</head>
 <body><section><h4>부유 실습</h4>
 <p>다음 예제는 문장에 그림을 입력하기 위해 부유(float)없는 모습과 왼쪽에 부유(float)하는 모습을 작성한 것입니다.  문장내의 문자가 이미지 주변을 둘러 싸고 있습니다. 참고로 이미지는 display:block을 사용함</p>
 <h4>부유 없음</h4>
