--- a/login/login2.html
+++ b/login/login2.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8"/>
 <style>
-#section0 { width:400px; height:120px; 
-          border:solid 1px lightgrey; border-radius:1em; }
+#section0 { width:400px; height:120px;
+          border:solid 1px lightgrey; border-radius:1em;}
 ul.level_1 > li {list-style:none; display:inline-block;}
-ul.level_1 > li > ul {list-style:none; }
+ul.level_1 > li > ul {list-style:none;}
 </style>
 <title>로그인 실습</title>
 </head>
@@ -20,4 +20,5 @@ ul.level_1 > li > ul {list-style:none; }
     </ul>
   <li><button>로그인</button></li></ul>
 </section>
-</body></html> 
+</body>
+</html> 
