--- a/login/memb1.html
+++ b/login/memb1.html
@@ -1,5 +1,7 @@
 <!doctype html><!-- memb1.html -->
-<html><head><meta charset="utf-8"/>
+<html>
+<head>
+<meta charset="utf-8"/>
 <style>
 #section0 { width:300px; height:200px; 
           border:solid 1px lightgray; border-radius:1em; }
@@ -15,4 +17,5 @@ ul.level_1 > li { display:inline-block;}
   <ul class="level_1">
   <li>회원가입버튼</li><li>취소버튼</li>
   </ul></section>
-</body></html>
+</body>
+</html>
