--- a/login/memb2.html
+++ b/login/memb2.html
@@ -1,7 +1,9 @@
 <!doctype html><!-- memb2.html -->
-<html><head><meta charset="utf-8"/>
+<html>
+<head>
+<meta charset="utf-8"/>
 <style>
-#section0 { width:400px; height:200px; 
+#section0 { width:400px; height:200px;
           border:solid 1px lightgray; border-radius:1em; }
 ul { list-style:none; }
 ul.level_1 > li { display:inline-block;}
@@ -17,4 +19,7 @@ ul.level_1 > li { display:inline-block;}
   <ul class="level_1">
   <li><button>회원가입</button></li>
   <li><button>취소</button></li>
-  </ul></section></body></html>
+  </ul>
+</section>
+</body>
+</html>
