--- a/login/memb3.html
+++ b/login/memb3.html
@@ -1,6 +1,8 @@
 <!doctype html><!-- memb3.html -->
-<html><head><meta charset="utf-8"/>
-<style>#section0 { width:320px; height:200px; 
+<html>
+<head>
+<meta charset="utf-8"/>
+<style>#section0 { width:320px; height:200px;
           border:solid 1px lightgrey; border-radius:1em; }
 ul { list-style:none; } ul.level_1>li { display:inline-block;}
 .level_1 span { display:inline-block; width:70px;}
@@ -18,4 +20,6 @@ button { width:70px; height:25px;}
   <ul class="level_1">
   <li><button>회원가입</button></li>
   <li><button>취소</button></li></ul>
-</section></body></html>
+</section>
+</body>
+</html>
