--- a/login/memb4.html
+++ b/login/memb4.html
@@ -1,5 +1,7 @@
-<!doctype html><!--  memb4.html  -->
-<html><head><meta charset="utf-8"/><style>
+<!doctype html><!-- memb4.html -->
+<html>
+<head>
+<meta charset="utf-8"/><style>
 #section0 { width:400px; height:240px; border:solid 1px lightgray; border-radius:1em; }
 ul { list-style:none; } ul.level_1>li { display:inline-block;}
 .level_1 span { display:inline-block; width:70px;}
@@ -18,4 +20,8 @@ button { width:70px; height:25px;}
   <li><span>취미</span></li><li><input type="checkbox">낚시</li>
   <li><input type="checkbox">노래</li><li><input type="checkbox">독서</li></ul>
   <ul class="level_1"><li><button>회원가입</button></li>
-  <li><button>취소</button></li></ul></section></body></html>
+  <li><button>취소</button></li>
+  </ul>
+  </section>
+  </body>
+</html>
