--- a/login/memb5.html
+++ b/login/memb5.html
@@ -1,5 +1,7 @@
-<!doctype html><!--   memb5.html -->
-<html><head><meta charset="utf-8"/>
+<!doctype html><!-- memb5.html -->
+<html>
+<head>
+<meta charset="utf-8"/>
 <style>
 * {padding:0; margin:0; }
 #section0{width:270px;height:125px;border:solid 1px lightgray;margin:10px; padding:10px; border-radius:1em; box-shadow:9px 6px 6px gray;}
@@ -21,4 +23,6 @@ ul { list-style:none; }  ul.level_1>li { display:inline-block; line-height:1.5em
   <li><input type="checkbox" name="hobby" value="reading">독서</li></ul>
   <ul class="level_1">
   <li><button type="submit">회원가입</button></li><li><button type="reset">취소</button></li></ul>
-</form></section></body></html>
+</form></section>
+ </body>
+</html>
