--- a/2/rwd1.html
+++ b/2/rwd1.html
@@ -20,7 +20,7 @@
   <section  class="col-6">
     <h3>대전광역시</h3><p>우리나라 중앙에 위치한 150만…..</p></section>
   <aside  class="col-3  banner">
-   <ul><li><img src="../images/flag.png">한국</li><li><img src="../images/flag.png"/>Korea</li></ul></aside>
+   <ul><li><img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/taegeuk.png?raw=true">한국</li><li><img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/taegeuk.png?raw=true"/>Korea</li></ul></aside>
 </div><div class="row"></div>
 <footer class="footer"><h4>Copyright 20XX Korea.</h4></footer>
 </body>
