--- a/2/rwd4.html
+++ b/2/rwd4.html
@@ -12,10 +12,10 @@
      <picture>
       <source media="(min-width: 768px)" srcset="../images/lob_big.png">
       <source media="(min-width: 600px)" srcset="../images/lob_normal.png">
-      <img src="../images/lob_small.png" alt="lobster" style="width:auto;">
+      <img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/lobster.png?raw=true" alt="lobster" style="width:auto;">
     </picture>
   </section>
   <aside  class="col-3  col-m-12  banner">
-   <ul><li><img src="../images/flag.png">한국</li><li><img src="../images/flag.png"/>Korea</li></ul></aside>
+   <ul><li><img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/taegeuk.png?raw=true">한국</li><li><img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/taegeuk.png?raw=true"/>Korea</li></ul></aside>
 </div><div class="row"></div>
 <footer class="footer"><h4>Copyright 20XX Korea.</h4></footer></body></html>
