--- a/2/rwd4.html
+++ b/2/rwd4.html
@@ -12,7 +12,7 @@
      <picture>
       <source media="(min-width: 768px)" srcset="../images/lob_big.png">
       <source media="(min-width: 600px)" srcset="../images/lob_normal.png">
-      <img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/lobster.png?raw=true" alt="lobster" style="width:auto;">
+      <img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/lob_small.png?raw=true" alt="lobster" style="width:auto;">
     </picture>
   </section>
   <aside  class="col-3  col-m-12  banner">
