--- a/2/rwd4.html
+++ b/2/rwd4.html
@@ -10,8 +10,8 @@
   <section  class="col-6  col-m-9">
     <h3>대전광역시</h3><p>우리나라 중앙에 위치한 150만…..</p>
      <picture>
-      <source media="(min-width: 768px)" srcset="../images/lob_big.png">
-      <source media="(min-width: 600px)" srcset="../images/lob_normal.png">
+      <source media="(min-width: 768px)" srcset="https://github.com/yjs8888/yjs8888.github.io/blob/master/lob_big.png?raw=true">
+      <source media="(min-width: 600px)" srcset="https://github.com/yjs8888/yjs8888.github.io/blob/master/lob_normal.png?raw=true">
       <img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/lob_small.png?raw=true" alt="lobster" style="width:auto;">
     </picture>
   </section>
