--- a/2/HW.html
+++ b/2/HW.html
@@ -24,7 +24,7 @@
 <body>
   <header>
     <h2>자격증 정리사이트</h2>
-    <img src="https://t1.daumcdn.net/thumb/R720x0/?fname=http://t1.daumcdn.net/brunch/service/user/514Q/image/crEwtBmO-ap2V9adDbSEZFyPxWk.PNG?type=w1200" alt="히말라야">
+    <a href="https://yjs8888.github.io/2/HW.html"><img src="https://t1.daumcdn.net/thumb/R720x0/?fname=http://t1.daumcdn.net/brunch/service/user/514Q/image/crEwtBmO-ap2V9adDbSEZFyPxWk.PNG?type=w1200" alt="히말라야">
   </header>
   <nav>
     <ul>
