--- a/2/HW.html
+++ b/2/HW.html
@@ -32,8 +32,8 @@
   </nav>
  <section> <!-- main -->
   <section><h3 id="chapter2">자격증 달력</h3>
-   <img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/%EC%BA%A1%EC%B2%98.JPG?raw=true alt="">
-    <p>제1장에서 공부한 내용이 궁금하다면 다음을 <a href="#chapter1">클릭</a>하세요.</p></section>
+   <img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/%EC%BA%A1%EC%B2%98.JPG?raw=true alt="" width="500"height="400">
+    </section>
   <section><h3 id="chapter3">제3장</h3>
     <p>제3장 입니다. 제 3장은 무엇을 정의합니다.</p>
     <table><tbody><tr><th>이동주소</th><th>사이트명</th><th>설명</th></tr>
