--- a/2/HW.html
+++ b/2/HW.html
@@ -32,7 +32,7 @@
   </nav>
  <section> <!-- main -->
   <section><h3 id="chapter2">자격증 달력</h3>
-  <a href="https://github.com/yjs8888/yjs8888.github.io/blob/master/%EC%BA%A1%EC%B2%98.JPG?raw=true"><img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/%EC%BA%A1%EC%B2%98.JPG?raw=true alt="" width="700"height="400">
+  <a href="url/https://github.com/yjs8888/yjs8888.github.io/blob/master/%EC%BA%A1%EC%B2%98.JPG?raw=true"><img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/%EC%BA%A1%EC%B2%98.JPG?raw=true alt="" width="700"height="400">
     </section>
   <section><h3 id="chapter3">제3장</h3>
     <p>제3장 입니다. 제 3장은 무엇을 정의합니다.</p>
