--- a/2/HW.html
+++ b/2/HW.html
@@ -44,9 +44,7 @@
   </section> <!-- /main -->
  <aside>
      <ul>
-      <li><a href="https://www.google.com"><img src="https://t1.daumcdn.net/thumb/R720x0/?fname=http://t1.daumcdn.net/brunch/service/user/5rH/image/LHUiJV1nog0BqnOJ8Mtj5UbNTjQ" alt="구글"></a></li>
-      <li><a href="https://www.facebook.com"><img src="https://www.facebook.com/images/fb_icon_325x325.png" alt="페이스북"></a></li>
-      <li><a href="https://www.twitter.com"><img src="https://upload.wikimedia.org/wikipedia/ko/thumb/9/9e/%ED%8A%B8%EC%9C%84%ED%84%B0_%EB%A1%9C%EA%B3%A0_%282012%29.svg/1200px-%ED%8A%B8%EC%9C%84%ED%84%B0_%EB%A1%9C%EA%B3%A0_%282012%29.svg.png"></a></li>
+      <li><a href="https://www.youtube.com/watch?v=oW2hMQTVgfw&list=PLKpxllD6C8CnkSWfqRJsHOYtbBFnvtrcY"><img src="http://img.vogue.co.kr/vogue/2018/12/style_5c130671c1949.jpg" alt="유튜브"></a></li>
      </ul>
   </aside>
   <footer>
