--- a/2/HW.html
+++ b/2/HW.html
@@ -15,10 +15,6 @@
   aside ul {margin:0; padding:0;}
   aside ul li {display:block; margin:5px;}
   aside ul li img { width:50px; height:50px; }
-  a:link {  color:blue; background-color:transparent; text-decoration:none; }
-  a:visited {  color:pink; background-color:transparent; text-decoration:none; }
-  a:hover {  color:red; background-color:transparent; text-decoration:underline;}
-  a:active {  color:blue; background-color:transparent; text-decoration:none; }
 </style>
 <title>자격증 정리사이트</title></head>
 <body>
@@ -48,7 +44,7 @@
      </ul>
   </aside>
   <footer>
-    <p>© 20XX  Made by Korea.  All rights reserved.</p>
+    <p>© 20141500 윤진수.</p>
   </footer> 
 </body>
 </html>
