--- a/2/HW.html
+++ b/2/HW.html
@@ -30,12 +30,8 @@
   <section><h3 id="chapter2">자격증 달력</h3>
   <a href="https://github.com/yjs8888/yjs8888.github.io/blob/master/%EC%BA%A1%EC%B2%98.JPG?raw=true"><img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/%EC%BA%A1%EC%B2%98.JPG?raw=true alt="" width="700"height="400">
     </section>
-  <section><h3 id="chapter3">제3장</h3>
-    <p>제3장 입니다. 제 3장은 무엇을 정의합니다.</p>
-    <table><tbody><tr><th>이동주소</th><th>사이트명</th><th>설명</th></tr>
-    <tr><td>구글</td><td><a href="http://www.naver.com">네이버</a></td><td>네이버</td></tr>
-    <tr><td>사이트다른문서</td><td><a href="anchor2.html">anchor2.html로이동</a></td><td>anchor2</td></tr>
-     <tr><td>제1장</td><td><a href="#chapter1">제1장이동(북마크이동)</a></td><td>제1장</td></tr></tbody></table>
+  <section><h3 id="chapter3">정보처리기사 시험날짜</h3>
+ <img src=https://github.com/yjs8888/yjs8888.github.io/blob/master/%EC%BA%A1%EC%B2%982.JPG?raw=true>
   </section> 
   </section> <!-- /main -->
  <aside>
