--- a/2/HW.html
+++ b/2/HW.html
@@ -35,13 +35,13 @@
   </section> 
   </section> <!-- /main -->
  <aside>
+    <p>자격증 </p>
      <ul>
-<h3 id="chapter0"></h3>
       <li><a href="https://www.youtube.com/watch?v=oW2hMQTVgfw&list=PLKpxllD6C8CnkSWfqRJsHOYtbBFnvtrcY"><img src="http://img.vogue.co.kr/vogue/2018/12/style_5c130671c1949.jpg" alt="유튜브"></a></li>
      </ul>
   </aside>
   <footer>
-    <p>© 20141500 윤진수.</p>
+    <p> 20141500 윤진수 </p>
   </footer> 
 </body>
 </html>
