--- a/2/HW.html
+++ b/2/HW.html
@@ -24,7 +24,7 @@
   </header>
   <nav>
     <ul>
-    <li><a href="http://www.q-net.or.kr/man001.do?gSite=Q" target="_blank">자격증 사이트</a></li>
+    <li><a href="http://www.q-net.or.kr/man001.do?gSite=Q" target="_blank">자격증 사이트(Q넷)</a></li>
   </nav>
  <section> <!-- main -->
   <section><h3 id="chapter2">자격증 달력</h3>
