--- a/2/HW.html
+++ b/2/HW.html
@@ -36,7 +36,9 @@
   </section> <!-- /main -->
  <aside>
      <ul>
-      <li><a href="https://www.youtube.com/watch?v=oW2hMQTVgfw&list=PLKpxllD6C8CnkSWfqRJsHOYtbBFnvtrcY"><img src="http://img.vogue.co.kr/vogue/2018/12/style_5c130671c1949.jpg" alt="유튜브"></a></li>
+    <li><a href="http://www.dju.ac.kr/kor/html/main.htm"><img src="https://github.com/yjs8888/yjs8888.github.io/blob/master/46195e3b89d39199d3745315f848ead3d4c1279d4da1ef6c769a9b6f49751012da59bd867e468fdc87ce2a4d8172ec99357c19661fc2277f3a42e098f705b2145686e54d71e02cf54e66938922be2999a88d1df37096cf3575ba4861cd409786.jpg?raw=true
+" alt="대전대"></a></li>
+    <li><a href="https://www.youtube.com/watch?v=oW2hMQTVgfw&list=PLKpxllD6C8CnkSWfqRJsHOYtbBFnvtrcY"><img src="http://img.vogue.co.kr/vogue/2018/12/style_5c130671c1949.jpg" alt="유튜브"></a></li>
      </ul>
   </aside>
   <footer>
